# plumbline

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
app/: main.py
app/application/: __init__.py
app/application/use_cases/: __init__.py  get_latest_holdings.py  import_holdings_ibkr.py  import_holdings_manual.py
app/core/: config.py  errors.py
app/infrastructure/db/: __init__.py  db.py  models.py  repositories.py
app/infrastructure/io/: holdings_csv.py  ibkr_activity_statement.py
app/web/: main.py
app/web/routes/: import_routes.py  pages.py
app/web/templates/: error.html  holdings.html  import.html  import_success.html  index.html
docs/: OVERVIEW.md  REQUIREMENTS_FUNCTIONAL.md
scripts/: check_branch_name.py
tests/: conftest.py  test_db_init.py
tests/api/routes/: test_utils.py
tests/application/use_cases/: test_get_latest_holdings.py  test_import_holdings_ibkr.py  test_import_holdings_manual.py
tests/core/: test_errors.py
tests/infrastructure/db/: test_repositories.py
tests/infrastructure/io/: ibkr_fixture.py  test_holdings_csv.py  test_ibkr_activity_statement.py
tests/web/routes/: test_error_handling.py  test_import_routes.py
